[gd_scene load_steps=7 format=2]

[ext_resource path="res://ground_tileset.tres" type="TileSet" id=1]
[ext_resource path="res://Scenes/PrototypeNotificationScreen.gd" type="Script" id=2]
[ext_resource path="res://sprites/OK_Button_Selected.png" type="Texture" id=3]
[ext_resource path="res://sprites/TitleGraphics/AIChasingDawnComposite.png" type="Texture" id=4]
[ext_resource path="res://sprites/WhiteBox.png" type="Texture" id=5]
[ext_resource path="res://sprites/OK_Button.png" type="Texture" id=6]

[node name="TitleScreen" type="Node2D"]
script = ExtResource( 2 )

[node name="TileMap" type="TileMap" parent="."]
visible = false
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 0, 1610612745, 0, 1, 1610612737, 0, 2, 1610612737, 0, 3, 1610612737, 0, 4, 1610612737, 0, 5, 1610612737, 0, 6, 1610612737, 0, 7, 1610612737, 0, 8, 1610612737, 0, 9, 1610612737, 0, 10, 1610612737, 0, 11, 1610612737, 0, 12, 1610612737, 0, 13, 1610612737, 0, 14, 1610612737, 0, 15, 1610612737, 0, 16, 1610612737, 0, 17, 1610612737, 0, 18, 1610612737, 0, 19, 1610612744, 0, 65536, 4, 0, 65555, 5, 0, 131072, 4, 0, 131091, 5, 0, 196608, 4, 0, 196627, 5, 0, 262144, 4, 0, 262163, 5, 0, 327680, 4, 0, 327699, 5, 0, 393216, 4, 0, 393235, 5, 0, 458752, 4, 0, 458771, 5, 0, 524288, 4, 0, 524304, 2, 0, 524305, 3, 0, 524307, 5, 0, 589824, 4, 0, 589840, 5, 0, 589841, 4, 0, 589843, 5, 0, 655360, 1610612745, 0, 655361, 0, 0, 655362, 0, 0, 655363, 0, 0, 655364, 0, 0, 655365, 0, 0, 655366, 0, 0, 655367, 0, 0, 655368, 0, 0, 655369, 0, 0, 655370, 0, 0, 655371, 0, 0, 655372, 0, 0, 655373, 0, 0, 655374, 0, 0, 655375, 0, 0, 655376, 0, 0, 655377, 0, 0, 655378, 0, 0, 655379, 1610612745, 0, 720896, 1610612745, 0, 720897, 1610612745, 0, 720898, 1610612745, 0, 720899, 1610612745, 0, 720900, 1610612745, 0, 720901, 1610612745, 0, 720902, 1610612745, 0, 720903, 1610612745, 0, 720904, 1610612745, 0, 720905, 1610612745, 0, 720906, 1610612745, 0, 720907, 1610612745, 0, 720908, 1610612745, 0, 720909, 1610612745, 0, 720910, 1610612745, 0, 720911, 1610612745, 0, 720912, 1610612745, 0, 720913, 1610612745, 0, 720914, 1610612745, 0, 720915, 1610612745, 0 )

[node name="BackingImageGraphic" type="Sprite" parent="."]
modulate = Color( 0.368627, 0.368627, 0.368627, 1 )
position = Vector2( 161, 90 )
scale = Vector2( 1.0125, 1.01111 )
texture = ExtResource( 4 )

[node name="TextBackingTexture" type="TextureRect" parent="."]
modulate = Color( 0.0431373, 0.0431373, 0.0431373, 0.780392 )
margin_left = 10.0
margin_top = 10.0
margin_right = 319.0
margin_bottom = 142.0
texture = ExtResource( 5 )
expand = true

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 15.0
margin_top = 15.0
margin_right = 316.0
margin_bottom = 138.0
text = "Chasing Dawn Prototype: This is a very rough prototype that I made in conjunction with Hypatia based off of some excellent spritework and a concept that she had developed.

Intended to be a Metroidvania except with a linear story and branching path structure I was forced to abandon this prototype after we both began suffering debilitating health issues.

Chasing Dawn would by far be the most difficult prototype for me to complete as I am unable to do a lot of the art on my own, plus I don't have the edcuation necessary to make good 2D levels. Thus I'd either need people willing to join the team, or sufficient money to pay someone in order to bring this concept to completion.

"

[node name="StartButton" type="TextureButton" parent="."]
margin_left = 138.0
margin_top = 144.0
margin_right = 182.0
margin_bottom = 176.0
texture_normal = ExtResource( 6 )
texture_focused = ExtResource( 3 )

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
